# shaunM12_Brasaland-Website

./: .gitignore  DEVELOPMENT_RULES.md  README.es.md  README.md  TESTING.md  agents.md  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
scripts/: README.md  (+8 more)
services/api/: .env.example  README.md  config.py  database.py  errors.py  main.py  pyproject.toml  requirements.txt  seed.py
services/api/auth/: __init__.py  audit.py  dependencies.py  models.py  password_resets.py  refresh_tokens.py  routes.py  security.py  verifications.py
services/api/data/: .gitignore
services/api/incident_analyzer/: __init__.py  analyzer.py  constants.py  core.py  reporting.py  schemas.py  store.py  validators.py
services/api/incidents/: __init__.py  constants.py  models.py  repository.py  routes.py  schemas.py
services/api/inventory/: __init__.py  constants.py  models.py  repository.py  routes.py  schemas.py  seed.py  seed_data.py
services/api/mailer/: __init__.py  providers.py  sender.py  templates.py
services/api/suppliers/: __init__.py  constants.py  models.py  repository.py  routes.py
services/api/tests/: conftest.py  test_audit.py  test_auth.py  test_authorization.py  test_dependencies.py  test_error_handling.py  test_incidents_manager.py  test_inventory.py  test_login.py  test_password_reset.py  test_refresh_tokens.py  test_register.py  test_security.py  test_suppliers.py  test_token.py  test_token_stores.py  test_users.py  test_verify_email.py
services/api/users/: __init__.py  models.py  repository.py  routes.py
(+230 files in other folders)
