[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brasaland-api"
version = "0.1.0"
description = "Brasaland FastAPI service for incidents and supplier directory"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "pandas>=2.0",
  "tinydb>=4.8",
  "pydantic>=2.0",
  "email-validator>=2.0",
  "httpx>=0.27",
  "pytest>=8.0",
]

[project.scripts]
seed = "seed:main"

[tool.hatch.build.targets.wheel]
packages = ["suppliers", "incident_analyzer"]

[tool.hatch.build.targets.wheel.force-include]
"seed.py" = "seed.py"
"database.py" = "database.py"
